# baml-ts-sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  otel-trace-instrumentation-guide.md
.github/workflows/: ci.yml
crates/baml-agent-runner/src/: main.rs
crates/baml-agent-runner/tests/: runner_test.rs
crates/baml-rt-a2a/: Cargo.toml
crates/baml-rt-a2a/src/: a2a.rs  a2a_store.rs  a2a_transport.rs  a2a_types.rs  error_classifier.rs  events.rs  handlers.rs  lib.rs  request_router.rs  response.rs  result_deduplicator.rs  result_extractor.rs  result_pipeline.rs  result_processor.rs  stream_normalizer.rs
crates/baml-rt-a2a/tests/: provenance_context_test.rs  task_streaming_test.rs
crates/baml-rt-builder/src/: baml-agent-builder.rs
crates/baml-rt-builder/src/builder/: compiler.rs  filesystem.rs  linter.rs  mod.rs  packager.rs  service.rs  traits.rs  types.rs
crates/baml-rt-builder/tests/: builder_test.rs
crates/baml-rt-core/src/: context.rs  correlation.rs  ids.rs  lib.rs  types.rs
crates/baml-rt-interceptor/src/: interceptor.rs
crates/baml-rt-interceptor/src/interceptors/: tracing.rs
crates/baml-rt-interceptor/tests/: interception_test.rs
crates/baml-rt-observability/src/: metrics.rs  spans.rs  tracing_setup.rs
crates/baml-rt-provenance/: Cargo.toml
crates/baml-rt-provenance/src/: builders.rs  document.rs  error.rs  events.rs  interceptors.rs  lib.rs  store.rs  types.rs
crates/baml-rt-provenance/tests/: store_test.rs
crates/baml-rt-quickjs/: README.md
crates/baml-rt-quickjs/src/: baml.rs  baml_collector.rs  baml_execution.rs  baml_pre_execution.rs  context.rs  js_value_converter.rs  lib.rs  quickjs_bridge.rs  runtime.rs  traits.rs
crates/baml-rt-quickjs/tests/: baml_invoke_test.rs  baml_stream_test.rs  bridge_test.rs  sandbox_test.rs
crates/baml-rt-tools/src/: tool_mapper.rs  tools.rs
crates/baml-rt-tools/tests/: direct_execution_test.rs  llm_workflows_test.rs  registration_test.rs  trait_system_test.rs
crates/baml-rt/src/: lib.rs
crates/baml-rt/tests/: contracts_test.rs  execution_test.rs  invoke_test.rs  llm_test.rs  tool_calling_test.rs
crates/test-support/src/: common.rs
crates/test-support/src/common/: test_tools.rs
crates/test-support/src/support/: a2a.rs  mod.rs  tools.rs
examples/agent-example/: README.md  manifest.json  package.json  tsconfig.json
examples/agent-example/src/: baml-runtime.d.ts  index.ts
src/: baml.rs  baml_collector.rs  baml_execution.rs  baml_pre_execution.rs  context.rs  interceptor.rs  js_value_converter.rs  lib.rs  main.rs  quickjs_bridge.rs  runtime.rs  spans.rs  tool_mapper.rs  tools.rs  traits.rs
src/builder/: compiler.rs  filesystem.rs  linter.rs  mod.rs  packager.rs  service.rs  traits.rs  types.rs
src/interceptors/: mod.rs  tracing.rs
tests/: README.md  common.rs
tests/e2e/: agent_runner_test.rs  e2e_agent_runner_test.rs  e2e_baml_tool_calling_test.rs  e2e_js_tool_llm_test.rs  e2e_llm_interceptor_test.rs  e2e_llm_test.rs  e2e_llm_tool_calling_test.rs  e2e_tool_llm_test.rs  e2e_trait_tool_system_test.rs
tests/fixtures/: README.md
tests/fixtures/agents/complex-agent/: manifest.json
tests/fixtures/agents/complex-agent/src/: index.ts
tests/fixtures/agents/minimal-agent/: manifest.json
tests/fixtures/agents/minimal-agent/baml_src/: simple.baml
tests/fixtures/agents/minimal-agent/src/: index.ts
tests/fixtures/agents/tool-agent/: manifest.json
tests/fixtures/agents/tool-agent/baml_src/: tool_union.baml
tests/fixtures/agents/tool-agent/src/: index.ts
tests/fixtures/baml/: simple_prompt.baml  tool_calling.baml  weather_tool.baml
tests/integration/: baml_execution_test.rs  baml_function_result_contract_test.rs  baml_invoke_test.rs  cli_integration_test.rs  integration_llm_interception_test.rs  invoke_function_contract_test.rs  quickjs_baml_invoke_test.rs  quickjs_baml_stream_test.rs  quickjs_bridge_test.rs  quickjs_sandbox_test.rs
tests/support/: fixtures.rs  mod.rs  tools.rs
tests/unit/: baml_runtime_test.rs  interceptor_test.rs  js_tool_registration_test.rs  llm_interceptor_test.rs  quickjs_value_conversion_golden_test.rs  tool_registration_test.rs  tracing_interceptor_test.rs
tools/: .dockerignore  example-manifest.json  package-manifest-schema.json
